--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-export BOT_TOKEN=6254122046:AAHoZEv-dwqtrD2hSwxZFOHhX4MBSeQjOqs
+#Telegram
+BOT_TOKEN='6254122046:AAHoZEv-dwqtrD2hSwxZFOHhX4MBSeQjOqs'
+CHAT_ID='812427267'
+
+# Registro Jornada
+USER = "jdelat"
+PASS = "!Barrios.2023"
+COD_EMPLEADO = "800493"
