--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 APScheduler==3.6.3
+autopep8==2.0.2
 backports.zoneinfo==0.2.1
 beautifulsoup4==4.12.0
 cachetools==4.2.2
@@ -7,6 +8,7 @@ charset-normalizer==2.0.12
 idna==3.4
 importlib-resources==5.4.0
 lxml==4.9.2
+pycodestyle==2.10.0
 python-dotenv==0.20.0
 python-telegram-bot==13.12
 pytz==2023.3
@@ -14,6 +16,7 @@ pytz-deprecation-shim==0.1.0.post0
 requests==2.27.1
 six==1.16.0
 soupsieve==2.3.2.post1
+tomli==1.2.3
 tornado==6.1
 tzdata==2023.3
 tzlocal==4.2
