--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
       # secret ones in .env file or system
       BOT_TOKEN: ${BOT_TOKEN}
       CHAT_ID: ${CHAT_ID}
-      COD_EMPLEADO: "800493"
+      COD_EMPLEADO: ${COD_EMPLEADO}
       # and public ones can be hardcoded
-      USUARIO: "jdelat"
-      PASS: "!Barrios.2023"
+      USUARIO: ${USUARIO}
+      PASS: ${PASS}
       # sometimes the console won't show print messages,
       # using PYTHONUNBUFFERED: 1 can fix this
       PYTHONUNBUFFERED: 1
