mod docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   registrojornadaviveopython:
-    image: registrojornadaviveopython
+    image: viveorange
     build:
       context: .
       dockerfile: ./Dockerfile
